<resources>
    <string name="app_name">Rent Collect New</string>
    <string name="land_lord">Land Lord</string>
    <string name="tenent">Tenent</string>
    <string name="you_are_a">You Are A</string>
    <string name="terms_and_conditions">By using this application, you are agreeing to receive some notices exclusively electronically, including notifications about late payments, notices to quit, and eviction notices. You are also agreeing to our Privacy Policy and Terms of Use</string>
    <string name="phone_number">Your Phone Number</string>
    <string name="dash">-</string>
    <string name="bracket_close">)</string>
    <string name="bracket_opening">(</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="_811_pine_st_2">811 Pine St #2</string>
    <string name="los_angeles_ca_90505">Los Angeles, CA 90505</string>
    <string name="not_you"><u>(Not you?)</u></string>
    <string name="don_t_worry">Don\'t worry. Your landlord may have not finished setting up your account yet. Give them a call and let them know you\'d like to pay your rent with RentCollect with automatic payments to their bank account and absolutely no fees.</string>
    <string name="text_them_the_download_link_now"><u>Text them the download link now</u></string>
    <string name="total_due">Total Due:</string>
    <string name="_3520">$3520</string>
    <string name="how_would_you_like_to_pay">How would you like to pay?</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="can_t_pay_talk_to_your_landlord">Can\'t pay? Talk to your landlord</string>
    <string name="no_fees">(No Fees)</string>
    <string name="plus_3_processing_fee_">(Plus 3% Processing Fee)</string>
    <string name="upcoming_rent">Upcoming Rent:</string>
    <string name="november_rent">November rent:</string>
    <string name="unpaid_rent">Unpaid Rent:</string>
    <string name="october_rent">October rent</string>
    <string name="september_rent">September rent</string>
    <string name="august_rent">August rent</string>
    <string name="late_fees">Late fees</string>
    <string name="not_you_">Not you?</string>
    <string name="_650">$650</string>
    <string name="_31_days">(31 days)</string>
    <string name="_61_days">(61 days)</string>
    <string name="_10_days">(10 days)</string>
    <string name="_92_days">(92 days)</string>
    <string name="semi_colon">:</string>
    <string name="past_payments">Past Payments</string>
    <string name="jul_rent">Jul rent:</string>
    <string name="jun_rent">Jun rent</string>
    <string name="may_rent">May rent:</string>
    <string name="apr_rent">Apr rent:</string>
    <string name="mar_rent">Mar rent:</string>
    <string name="feb_rent">Feb rent:</string>
    <string name="jan_rent">Jan rent:</string>
    <string name="dec_rent">Dec rent</string>
    <string name="move_in_rent">Move-in rent</string>
    <string name="total_paid">Total Paid</string>
    <string name="_433_33">$433.33</string>
    <string name="_5_633_33">$5,633.33</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="would_you_like_">Would you like to set up AutoPay and get $25 off your rent every month?</string>
    <string name="_2019">2019</string>


</resources>